spacing issue resolve

--- a/scss/pages/_branding.scss
+++ b/scss/pages/_branding.scss
@@ -1,5 +1,9 @@
 // Bhavika's CSS
-
+html{
+@media all and (max-width:920px){
+    scroll-behavior: smooth;
+}
+}
 
 progress {
     position: fixed;
@@ -583,8 +587,10 @@ h2 {
     h2 {
         margin-bottom: 20px;
 
-        @media all and (max-width: 1050px) {
+        @media all and (max-width: 920px) {
             margin-bottom: 20px;
+            padding-top: 120px;
+            margin-top: -120px;
         }
 
     }
@@ -1588,6 +1594,7 @@ h2 {
     
     h1{
         line-height: 115px;
+        
     }
     
     @media all and (max-width: 1650px) {
@@ -1630,9 +1637,9 @@ h2 {
 }
 
 .bannerSec1 {
-    @media all and (max-width:920px) {
-        margin-top: 150px;
-    }
+    // @media all and (max-width:920px) {
+    //     margin-top: 150px;
+    // }
 
 
 
@@ -1652,9 +1659,9 @@ h2 {
 }
 
 .bannerSec2 {
-    @media all and (max-width:920px) {
-        margin-top: 150px;
-    }
+    // @media all and (max-width:920px) {
+    //     margin-top: 150px;
+    // }
 
     p {
         color: rgba(255, 255, 255, 0.9);
@@ -1664,9 +1671,9 @@ h2 {
 }
 
 .serviceSec {
-    @media all and (max-width:920px) {
-        margin-top: 150px;
-    }
+    // @media all and (max-width:920px) {
+    //     margin-top: 150px;
+    // }
 
     .serviceSlider {
         display: block;
@@ -1912,13 +1919,11 @@ h2 {
 }
 
 .teamSection {
-    @media all and (max-width:920px) {
-        margin-top: 150px;
-    }
+    // @media all and (max-width:920px) {
+    //     margin-top: 150px;
+    // }
 
-    @media all and(max-width:920px) {
-        margin-top: 150px;
-    }
+   
 
     .teamSec {
         display: flex;
@@ -2042,13 +2047,20 @@ h2 {
 }
 
 .clientsBox {
-    @media all and (max-width:920px) {
-        margin-top: 150px;
-    }
+    // @media all and (max-width:920px) {
+    //     margin-top: 150px;
+    // }
 
+    .filter{
+        @media all and (max-width:920px){
+            padding-top: 120px;
+            margin-top: -120px;
+        }
+    }
+    
     ul {
         list-style: none;
-    }
+       }
 
     .clientSec {
         display: flex;
@@ -2323,9 +2335,9 @@ h2 {
 }
 
 .testimonialsSec {
-    @media all and (max-width:920px) {
-        margin-top: 150px;
-    }
+    // @media all and (max-width:920px) {
+    //     margin-top: 150px;
+    // }
 
     .testimonialsSlider {
         margin: 0 -70px;
@@ -2490,9 +2502,9 @@ h2 {
 }
 
 .caseStudies {
-    @media all and (max-width:920px) {
-        margin-top: 150px;
-    }
+    // @media all and (max-width:920px) {
+    //     margin-top: 150px;
+    // }
 
     .boxcaseStudy {
 
